# The-Board

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  install_poller.ps1  install_poller_startup.ps1  install_run_shortcut.ps1  install_scheduler.ps1  pyproject.toml  run_boardroom.cmd  run_boardroom.ps1  run_now.cmd  run_now.ps1  run_poller.cmd  run_poller.ps1
boardroom/: __init__.py  __main__.py  adoption.py  cli.py  config.py  factory.py  market.py  portfolio.py  recommend.py  schedule.py  schemas.py
boardroom/adaptive/: __init__.py  calibration.py  growth.py  leash.py  ratchet.py  refit.py  retirement.py
boardroom/agents/: __init__.py  advisor.py  ceo.py  critic.py  llm.py  narrator.py  risk_manager.py  strategist.py
boardroom/backtest/: __init__.py  engine.py
boardroom/brokers/: __init__.py  base.py  ibkr.py  kraken.py  snaptrade.py  stub.py
boardroom/ceo/: __init__.py  engine.py  hurdle.py  sizing.py
boardroom/data/: __init__.py  news.py  snapshot.py  sources.py
boardroom/divisions/: __init__.py  base.py  crypto_trend.py  directional.py  effort.py  event.py  momentum.py  yield_div.py
boardroom/features/: __init__.py  technical.py
boardroom/graph/: __init__.py  decision_loop.py  learning_loop.py  performance_loop.py  resolution_loop.py
boardroom/measurement/: __init__.py  benchmarks.py  critic.py  performance.py
boardroom/models/: __init__.py  base.py  directional.py  event.py  momentum.py  yield_model.py
boardroom/persistence/: __init__.py  repository.py  supabase_repo.py
boardroom/risk/: __init__.py  caps.py  cost.py
dashboard/: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AskBoardroom.tsx  AuditLog.tsx  Countdown.tsx  EquityChart.tsx  Executed.tsx  (+10 more)
docs/: OPERATIONS.md  SCOPE.md
ibeam/: README.md  docker-compose.yml  env.list.example
scripts/: diagnose_venues.py  setup_env.py  snaptrade_connect.py
tests/: conftest.py  test_adopt.py  test_adoption.py  test_brokers.py  test_cad_gate.py  test_calibration.py  test_caps_and_risk.py  test_ceo_engine.py  test_cli.py  test_crypto_first.py  test_crypto_trend.py  test_divisions_and_loop.py  test_dynamic_universe.py  test_execution.py  test_exit_symbol_fallback.py  test_exits.py  test_features.py  test_fills_and_runs.py  test_floor_apr.py  test_growth.py  test_live_equity.py  test_live_gate.py  test_market_hours.py  test_measurement.py  test_momentum.py  test_news.py  test_portfolio.py  test_ratchet_and_strategist.py  test_recommend.py  test_refit.py  test_resolution_loop.py  test_rotation.py  test_run_requests.py  test_universe_scan.py
(+25 files in other folders)
