[project]
name = "boardroom"
version = "0.1.0"
description = "Boardroom — an autonomous multi-agent capital-allocation system (Canada build: Kraken + Interactive Brokers)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ahmed Awad" }]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.39.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "supabase>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Venue clients are isolated so the core installs/tests without them (Milestone 6).
venues = [
    "krakenex>=2.2",
    "ib-insync>=0.9.86",
]

[project.scripts]
boardroom = "boardroom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boardroom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
